vlib/v/checker/tests/assign_immutable_reference_var_with_parenthesis_err.vv
struct MyChar {
	c string
}

const a_char = MyChar{
	c: 'a'
}

fn foo() {
	mut a := &(a_char)
	mut b := &((a_char))
	mut c := &((((a_char))))
	println(a)
	println(b)
	println(c)
}
